--- a/views/view.html
+++ b/views/view.html
@@ -10,7 +10,7 @@
 <!-- Enlaces -->
   </head>
   <body>
-    <section id="third-section">
+    <section id="third-section"> <!-- título de vista e icono que regresa a index-->
       <div class="container-fluid">
         <div class="row">
           <div class="col-xs-8 col-xs-push-2">
@@ -20,7 +20,8 @@
             <h2>Sign Up</h2>
             <h5>Join now for free ride credit</h5>
             <hr>
-            <div class="row">
+
+            <div class="row"><!-- dropdown con banderas e input boton que direcciona a la siguiente vista-->
             <div class="col-lg-8">
               <div class="input-group">
                 <div class="input-group-btn">
@@ -36,11 +37,31 @@
             </div>
             </div>
             <h6>We'll send a text to verify your phone</h6>
-            <button class="next"class="btn btn-default btn-lg next col-xs-12" type="button">NEXT</button>
+<!-- Button trigger modal -->
+            <button class="next" class="btn btn-default btn-lg col-xs-12" data-toggle="modal" type="button" data-target="#modalCode">NEXT</button>
           </div>
         </div>
       </div>
     </section>
+<!-- Modal -->
+    <div id="modalCode"class="modal fade" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Tu codigo</h4>
+          </div>
+          <div class="modal-body">
+            <p>LAB-&hellip;</p>
+          </div>
+          <div class="modal-footer">
+              <a href="view2.html"><button type="button" class="btn btn-primary">OK</button></a>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+
 <!-- Enlaces -->
     <script src="../js/jquery-3.3.1.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="../js/app.js"></script>
