--- a/views/view3.html
+++ b/views/view3.html
@@ -38,7 +38,7 @@
              </div>
              <div class="">
                <label class="checkbox-inline"><input type="checkbox" value="">I agree to Lyft'ss <a class="terms"href="#">Terms of Service</a> </label>
-               <a class="next" href="check.html"><button class="btn btn-default btn-lg next col-xs-12" type="button">NEXT</button></a>
+               <a href="check.html"><button class="btn btn-default btn-lg next col-xs-12" type="button">NEXT</button></a>
              </div>
              </div>
            </div>
