--- a/views/view.html
+++ b/views/view.html
@@ -32,13 +32,13 @@
                     <li><a href="#"><img src="../assets/images/usa.jpeg" alt="usa"></a></li>
                   </ul>
                 </div>
-                <input id="number"type="text" class="form-control" value="52" aria-label="...">
+                <input id="number" type="text" class="form-control" value="+52" aria-label=" " maxlength="11">
               </div>
             </div>
             </div>
             <h6>We'll send a text to verify your phone</h6>
-<!-- Button trigger modal -->
-            <button class="next" class="btn btn-default btn-lg col-xs-12" data-toggle="modal" type="button" data-target="#modalCode">NEXT</button>
+<!-- Button trigger modal y boton enlazado con el input-->
+            <button id="next" class="btn next btn-default btn-lg col-xs-12" data-toggle="modal" type="submit" data-target="#modalCode" disabled="disabled">NEXT</button>
           </div>
         </div>
       </div>
@@ -64,6 +64,7 @@
 
 <!-- Enlaces -->
     <script src="../js/jquery-3.3.1.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="../js/splash.js"></script>
     <script type="text/javascript" src="../js/app.js"></script>
     <script src="../js/bootstrap.min.js"></script>
 </html>
