--- a/views/view2.html
+++ b/views/view2.html
@@ -27,7 +27,7 @@
             <div class="col-xs-8">
               <div class="input-group" id="labver">
                 <span class="input-group-addon labcode" id="basic-addon1">LAB-</span>
-                <input type="text" class="form-control" id="labnum" placeholder="_  _  _" aria-describedby="basic-addon1">
+                <input type="text" class="form-control" placeholder="_  _  _" aria-describedby="basic-addon1">
               </div>
             </div>
             </div>
