agregando num aleatorio

--- a/views/view.html
+++ b/views/view.html
@@ -49,10 +49,10 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">Tu codigo</h4>
+            <h4 class="modal-title">Tu codigo es</h4>
           </div>
           <div class="modal-body">
-            <p>LAB-&hellip;</p>
+            <p id="code">&hellip;</p>
           </div>
           <div class="modal-footer">
               <a href="view2.html"><button type="button" class="btn btn-primary">OK</button></a>
