activando boton al agregar codigo

--- a/views/view2.html
+++ b/views/view2.html
@@ -23,16 +23,16 @@
                 <hr>
             </div>
 
-            <div class="row"><!-- input boton que direcciona a la siguiente vista-->
+            <div class="row">
             <div class="col-xs-8">
               <div class="input-group" id="labver">
-                <span class="input-group-addon labcode" id="basic-addon1">LAB-</span>
-                <input type="text" class="form-control" placeholder="_  _  _" aria-describedby="basic-addon1">
+                <span class="input-group-addon labcode">LAB-</span>
+                <input id="newCode" type="text" class="form-control" placeholder="_  _  _" aria-describedby="basic-addon1" maxlength="3">
               </div>
             </div>
             </div>
             <p>Enter the code send to +52</p>
-            <a href="view3.html"><button class="btn btn-default btn-lg next col-xs-12" type="button">NEXT</button></a>
+            <a href="view3.html"><button id="next2"class="btn btn-default btn-lg next col-xs-12" type="button" disabled="disabled">NEXT</button></a>
 
           </div>
         </div>
